--- a/anons.html
+++ b/anons.html
@@ -20,7 +20,7 @@
             </a>
           </div>
           <!-- right -->
-          <div class="header__right">
+          <div class="header__right header__right-anons">
             <a
               href="#"
               class="header-right__item header-right-item-help d-flex"
@@ -54,47 +54,49 @@
         <!-- preview -->
         <div class="upcoming-preview">
           <div class="container">
-            <h1 class="upcoming-preview__title">
-              Upcoming
-              <span class="upcoming-preview-title__gradient">opened</span>
-              <span class="upcoming-preview-title__bottom"
-                >private servers</span
-              >
-            </h1>
-            <p class="upcoming-preview__text">
-              Встречайте обновленную версию MMOTOP! Мы учли ваши пожелания, и вы
-              будете приятно удивлены нашими нововведениями.
-            </p>
-            <div class="upcoming-preview__list">
-              <div class="upcoming-preview-list__left">
-                <div class="upcoming-preview-list-left__item">
-                  <img src="img/upcoming-preview-1.png" alt="upcoming" />
+            <div class="upcoming-preview-inner">
+              <h1 class="upcoming-preview__title">
+                Upcoming
+                <span class="upcoming-preview-title__gradient">opened</span>
+                <span class="upcoming-preview-title__bottom"
+                  >private servers</span
+                >
+              </h1>
+              <p class="upcoming-preview__text">
+                Встречайте обновленную версию MMOTOP! Мы учли ваши пожелания, и
+                вы будете приятно удивлены нашими нововведениями.
+              </p>
+              <div class="upcoming-preview__list">
+                <div class="upcoming-preview-list__left">
+                  <a href="#" class="upcoming-preview-list-left__item">
+                    <img src="img/upcoming-preview-1.png" alt="upcoming" />
+                  </a>
+                  <a href="#" class="upcoming-preview-list-left__item">
+                    <img src="img/upcoming-preview-2.png" alt="upcoming" />
+                  </a>
+                  <a href="#" class="upcoming-preview-list-left__item">
+                    <img src="img/upcoming-preview-3.png" alt="upcoming" />
+                  </a>
                 </div>
-                <div class="upcoming-preview-list-left__item">
-                  <img src="img/upcoming-preview-2.png" alt="upcoming" />
+                <div class="upcoming-preview-list__center">
+                  <div class="upcoming-preview__content">
+                    <img src="img/upcoming-center.png" alt="center" />
+                  </div>
+                  <div class="upcoming-preview__servers">132</div>
                 </div>
-                <div class="upcoming-preview-list-left__item">
-                  <img src="img/upcoming-preview-3.png" alt="upcoming" />
+                <div class="upcoming-preview-list__right">
+                  <a href="#" class="upcoming-preview-list-right__item">
+                    <img src="img/upcoming-preview-4.png" alt="upcoming" />
+                  </a>
+                  <a href="#" class="upcoming-preview-list-right__item">
+                    <img src="img/upcoming-preview-5.png" alt="upcoming" />
+                  </a>
+                  <a href="#" class="upcoming-preview-list-right__item">
+                    <img src="img/upcoming-preview-6.png" alt="upcoming" />
+                  </a>
                 </div>
+                <a href="#" class="upcoming-preview-list__other">Другие игры</a>
               </div>
-              <div class="upcoming-preview-list__center">
-                <div class="upcoming-preview__content">
-                  <img src="img/upcoming-center.png" alt="center" />
-                </div>
-                <div class="upcoming-preview__servers">132</div>
-              </div>
-              <div class="upcoming-preview-list__right">
-                <div class="upcoming-preview-list-right__item">
-                  <img src="img/upcoming-preview-4.png" alt="upcoming" />
-                </div>
-                <div class="upcoming-preview-list-right__item">
-                  <img src="img/upcoming-preview-5.png" alt="upcoming" />
-                </div>
-                <div class="upcoming-preview-list-right__item">
-                  <img src="img/upcoming-preview-6.png" alt="upcoming" />
-                </div>
-              </div>
-              <div class="upcoming-preview-list__other">Другие игры</div>
             </div>
           </div>
         </div>
@@ -216,7 +218,8 @@
     <!-- scripts -->
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="https://cdn.rawgit.com/hilios/jQuery.countdown/2.2.0/dist/jquery.countdown.min.js"></script>
+    <script src="js/swiper.js"></script>
+    <script src="js/jquery-countdown.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
