--- a/index.html
+++ b/index.html
@@ -3154,7 +3154,7 @@
     <!-- scripts -->
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="https://cdn.rawgit.com/hilios/jQuery.countdown/2.2.0/dist/jquery.countdown.min.js"></script>
+    <script src="js/jquery-countdown.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
