--- a/rating-info.html
+++ b/rating-info.html
@@ -239,54 +239,237 @@
                 </div>
                 <!-- item -->
                 <div class="rating-info-tabs-content__item">
-                  <h3>Инфомрация</h3>
-                  <p>
-                    Interested in a new roleplay experience? Popcorn RP is a new
-                    economy RP server on FiveM. We've built a new economy
-                    server, with a strict focus on balancing the dynamic between
-                    police, criminals, and businesses.
-                  </p>
-                  <p>
-                    We have an experienced development and admin team with
-                    experience running large, RP communities and have experience
-                    developing new and original content not found on other
-                    servers.
-                  </p>
-                  <p>
-                    Join our discord: 
-                    <a href="#">https://discord.gg/BjkhgC4yHM</a>
-                  </p>
-                  <p>We have:</p>
-                  <ul>
-                    <li>Player owned businesses</li>
-                    <li>Player-run economy and groups jobs</li>
-                    <li>Gangs and gang territories (gang hideouts)</li>
-                    <li>
-                      Custom cars with realistic and balanced handling (no OP
-                      police cars!)
-                    </li>
-                    <li>Robberies and more!</li>
-                  </ul>
-                  <p>
-                    We're currently in the process of hiring new EMS, LSPD, and
-                    more!
-                  </p>
-                  <p>
-                    Our team is focused on building an economy free from
-                    pay-to-win, biased admins, and we have a strict policy
-                    against hackers and cheaters.
-                  </p>
-                  <p>Come join us and give us your feedback and suggestions.</p>
-                  <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/V-MElMXdRhU?si=qX0AZRsisdXSVh1d"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin"
-                    allowfullscreen
-                  ></iframe>
+                  <div class="rating-info-tabs-content__reviews ritcr">
+                    <div class="ritcr-item">
+                      <div class="ritcr__top">
+                        <div class="ritcr-top__left">
+                          <div class="ritcr-top-left__avatar">
+                            <img
+                              src="img/rating-item-avatar-1.jpg"
+                              alt="avatar"
+                            />
+                          </div>
+                          <div class="ritcr-top-left__info">
+                            <div class="ritcr-top-left__username">
+                              El Matador
+                            </div>
+                            <div class="rlbii-bottom-rating__stars">
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="ritcr-top__days">3 days ago</div>
+                      </div>
+                      <div class="ritcr-text__box">
+                        <p class="ritcr__text">
+                          Morbi at mauris at massa cursus venenatis eu eu arcu.
+                          Nullam sed lacus eget dui rhoncus hendrerit. Quisque
+                          placerat et odio ac congue. Maecenas enim elit,
+                          faucibus id semper et, elementum sed dolor. Aliquam
+                          erat volutpat. Vivamus euismod commodo felis ac
+                          maximus. Quisque suscipit felis eros, ac scelerisque
+                          elit venenatis a. Proin sed justo sit amet est
+                          lobortis interdum eu vel ipsum. Donec sodales orci
+                          posuere, finibus erat nec, maximus sapien. Aliquam
+                          ullamcorper mollis mi eu sagittis. In id elit risus.
+                        </p>
+                        <p class="ritcr__text">
+                          Curabitur eget facilisis sem, eu sagittis neque.
+                          Aliquam ac neque urna. Aliquam erat volutpat. Proin a
+                          condimentum velit. In eu hendrerit ante. Donec ac
+                          lacinia risus, sit amet molestie arcu. Vivamus
+                          eleifend porttitor faucibus. Fusce et metus in magna
+                          congue congue in ac elit. Quisque rhoncus consequat
+                          purus et dignissim. Aliquam ut tincidunt libero.
+                          Phasellus mi purus, faucibus nec elit ac, imperdiet
+                          scelerisque quam. Aenean dapibus nibh eu consequat
+                          dapibus. Mauris tempus efficitur tortor, sed vulputate
+                          lacus. Class aptent taciti sociosqu ad litora torquent
+                          per conubia nostra, per inceptos himenaeos. Proin eu
+                          tempor ipsum.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="ritcr-item">
+                      <div class="ritcr__top">
+                        <div class="ritcr-top__left">
+                          <div class="ritcr-top-left__avatar">
+                            <img
+                              src="img/rating-item-avatar-2.jpg"
+                              alt="avatar"
+                            />
+                          </div>
+                          <div class="ritcr-top-left__info">
+                            <div class="ritcr-top-left__username">
+                              The Magician
+                            </div>
+                            <div class="rlbii-bottom-rating__stars">
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="ritcr-top__days">3 days ago</div>
+                      </div>
+                      <div class="ritcr-text__box">
+                        <p class="ritcr__text">
+                          Nemo enim ipsam voluptatem quia voluptas sit
+                          aspernatur aut odit aut fugit, sed quia consequuntur
+                          ma
+                        </p>
+                      </div>
+                    </div>
+                    <div class="ritcr-item">
+                      <div class="ritcr__top">
+                        <div class="ritcr-top__left">
+                          <div class="ritcr-top-left__avatar">
+                            <img
+                              src="img/rating-item-avatar-3.jpg"
+                              alt="avatar"
+                            />
+                          </div>
+                          <div class="ritcr-top-left__info">
+                            <div class="ritcr-top-left__username">
+                              Texas Dolly
+                            </div>
+                            <div class="rlbii-bottom-rating__stars">
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="ritcr-top__days">3 days ago</div>
+                      </div>
+                      <div class="ritcr-text__box">
+                        <p class="ritcr__text">
+                          Duis aute irure dolor in reprehenderit in voluptate
+                          velit esse cillum dolore eu fugiat nulla pariatu
+                        </p>
+                      </div>
+                    </div>
+                    <div class="ritcr-item">
+                      <div class="ritcr__top">
+                        <div class="ritcr-top__left">
+                          <div class="ritcr-top-left__avatar">
+                            <img
+                              src="img/rating-item-avatar-4.jpg"
+                              alt="avatar"
+                            />
+                          </div>
+                          <div class="ritcr-top-left__info">
+                            <div class="ritcr-top-left__username">Sailor</div>
+                            <div class="rlbii-bottom-rating__stars">
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="ritcr-top__days">3 days ago</div>
+                      </div>
+                      <div class="ritcr-text__box">
+                        <p class="ritcr__text">
+                          Duis aute irure dolor in reprehenderit in voluptate
+                          velit esse cillum dolore eu fugiat nulla pariatu
+                        </p>
+                      </div>
+                    </div>
+                    <div class="ritcr-item">
+                      <div class="ritcr__top">
+                        <div class="ritcr-top__left">
+                          <div class="ritcr-top-left__avatar">
+                            <img
+                              src="img/rating-item-avatar-5.jpg"
+                              alt="avatar"
+                            />
+                          </div>
+                          <div class="ritcr-top-left__info">
+                            <div class="ritcr-top-left__username">Sailor</div>
+                            <div class="rlbii-bottom-rating__stars">
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-o.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                              <div class="rlbii-bottom-rating--star">
+                                <img src="img/star-b.svg" alt="svg" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="ritcr-top__days">3 days ago</div>
+                      </div>
+                      <div class="ritcr-text__box">
+                        <p class="ritcr__text">
+                          Duis aute irure dolor in reprehenderit in voluptate
+                          velit esse cillum dolore eu fugiat nulla pariatu
+                        </p>
+                      </div>
+                    </div>
+                    <a href="#" class="acli-wrap-list__more d-flex">
+                      <div class="acli-wrap-list-more__icon"></div>
+                      <div class="acli-wrap-list-more__text">Показать еще</div>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -436,7 +619,8 @@
     <!-- jquery -->
     <!-- scripts -->
     <script src="js/jquery.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery-countdown.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
