--- a/rating.html
+++ b/rating.html
@@ -937,7 +937,8 @@
     <!-- jquery -->
     <!-- scripts -->
     <script src="js/jquery.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery-countdown.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
