--- a/anons-list.html
+++ b/anons-list.html
@@ -1214,7 +1214,8 @@
     <!-- jquery -->
     <!-- scripts -->
     <script src="js/jquery.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery-countdown.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
