--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com/page.html" />
+    <meta property="og:title" content="Content Title" />
+    <meta property="og:image" content="./images/sclbnr.jpg" />
+    <meta property="og:description" content="Description Here" />
+    <meta property="og:site_name" content="Site Name" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Next tags are optional but recommended -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <title>MMOANONS</title>
     <!-- styles -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -78,49 +93,65 @@
     <section class="preview">
       <div class="container">
         <div class="preview__wrapper">
-          <div class="preview__slider">
-            <!-- item -->
-            <div class="preview-slider__item">
-              <div class="preview-slider-item__inner">
-                <div class="preview-slider-item--back">
-                  <img src="img/preview-item-1.jpg" alt="preview" />
-                </div>
-                <div class="preview-slider-item__content">
-                  <div class="preview-slider-item--text">
-                    Получайте свежие анонсы прямо на ваше устройство первыми!
+          <div class="preview__slider--box">
+            <div class="swiper-container preview__slider">
+              <div class="swiper-wrapper">
+                <!-- item -->
+                <div class="preview-slider__item swiper-slide">
+                  <div class="preview-slider-item__inner">
+                    <div class="preview-slider-item--back">
+                      <img src="img/preview-item-1.jpg" alt="preview" />
+                    </div>
+                    <div class="preview-slider-item__content">
+                      <div class="preview-slider-item--text">
+                        Получайте свежие анонсы прямо на ваше устройство
+                        первыми!
+                      </div>
+                      <a href="#" class="preview-slider-item--btn"
+                        >Подписаться</a
+                      >
+                    </div>
                   </div>
-                  <a href="#" class="preview-slider-item--btn">Подписаться</a>
+                </div>
+                <!-- item -->
+                <div class="preview-slider__item swiper-slide">
+                  <div class="preview-slider-item__inner">
+                    <div class="preview-slider-item--back">
+                      <img src="img/preview-item-3.jpg" alt="preview" />
+                    </div>
+                    <div class="preview-slider-item__content">
+                      <div class="preview-slider-item--text">
+                        Получайте свежие анонсы прямо на ваше устройство
+                        первыми!
+                      </div>
+                      <a href="#" class="preview-slider-item--btn"
+                        >Подписаться</a
+                      >
+                    </div>
+                  </div>
+                </div>
+                <!-- item -->
+                <div class="preview-slider__item swiper-slide">
+                  <div class="preview-slider-item__inner">
+                    <div class="preview-slider-item--back">
+                      <img src="img/preview-item-2.jpg" alt="preview" />
+                    </div>
+                    <div class="preview-slider-item__content">
+                      <div class="preview-slider-item--text">
+                        Получайте свежие анонсы прямо на ваше устройство
+                        первыми!
+                      </div>
+                      <a href="#" class="preview-slider-item--btn"
+                        >Подписаться</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <!-- item -->
-            <div class="preview-slider__item">
-              <div class="preview-slider-item__inner">
-                <div class="preview-slider-item--back">
-                  <img src="img/preview-item-3.jpg" alt="preview" />
-                </div>
-                <div class="preview-slider-item__content">
-                  <div class="preview-slider-item--text">
-                    Получайте свежие анонсы прямо на ваше устройство первыми!
-                  </div>
-                  <a href="#" class="preview-slider-item--btn">Подписаться</a>
-                </div>
-              </div>
-            </div>
-            <!-- item -->
-            <div class="preview-slider__item">
-              <div class="preview-slider-item__inner">
-                <div class="preview-slider-item--back">
-                  <img src="img/preview-item-2.jpg" alt="preview" />
-                </div>
-                <div class="preview-slider-item__content">
-                  <div class="preview-slider-item--text">
-                    Получайте свежие анонсы прямо на ваше устройство первыми!
-                  </div>
-                  <a href="#" class="preview-slider-item--btn">Подписаться</a>
-                </div>
-              </div>
-            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
           </div>
         </div>
       </div>
@@ -3155,6 +3186,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery-countdown.js"></script>
+    <script src="js/selectize.min.js"></script>
+    <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
