--- a/rating.html
+++ b/rating.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com/page.html" />
+    <meta property="og:title" content="Content Title" />
+    <meta property="og:image" content="./images/sclbnr.jpg" />
+    <meta property="og:description" content="Description Here" />
+    <meta property="og:site_name" content="Site Name" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Next tags are optional but recommended -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <title>MMOANONS</title>
     <!-- styles -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -159,8 +170,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -215,8 +226,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -267,8 +278,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -321,8 +332,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -385,8 +396,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -440,8 +451,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -493,8 +504,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -544,8 +555,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -595,8 +606,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -646,8 +657,8 @@
                     <div class="rlbii__bottom">
                       <div class="rlbii-bottom__tags">
                         <div class="acrpt__list d-flex">
-                          <div class="acrpt-list__item">x1 000</div>
-                          <div class="acrpt-list__item">Interlude</div>
+                          <a href="#" class="acrpt-list__item">x1 000</a>
+                          <a href="#" class="acrpt-list__item">Interlude</a>
                         </div>
                       </div>
                       <div class="rlbii-bottom__rating">
@@ -849,16 +860,16 @@
             <div class="anons-content-right__popular--tags acrpt">
               <div class="anons-content-right-top__title">Popular tags</div>
               <div class="acrpt__list d-flex">
-                <div class="acrpt-list__item">x10</div>
-                <div class="acrpt-list__item">x50</div>
-                <div class="acrpt-list__item">x100</div>
-                <div class="acrpt-list__item">x1 000</div>
-                <div class="acrpt-list__item">x5 000</div>
-                <div class="acrpt-list__item">Hight Five</div>
-                <div class="acrpt-list__item">Interlude</div>
-                <div class="acrpt-list__item">Essence</div>
-                <div class="acrpt-list__item">Classic</div>
-                <div class="acrpt-list__item">GVE</div>
+                <a href="#" class="acrpt-list__item">x10</a>
+                <a href="#" class="acrpt-list__item">x50</a>
+                <a href="#" class="acrpt-list__item">x100</a>
+                <a href="#" class="acrpt-list__item">x1 000</a>
+                <a href="#" class="acrpt-list__item">x5 000</a>
+                <a href="#" class="acrpt-list__item">Hight Five</a>
+                <a href="#" class="acrpt-list__item">Interlude</a>
+                <a href="#" class="acrpt-list__item">Essence</a>
+                <a href="#" class="acrpt-list__item">Classic</a>
+                <a href="#" class="acrpt-list__item">GVE</a>
               </div>
             </div>
           </div>
@@ -939,6 +950,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery-countdown.js"></script>
+    <script src="js/selectize.min.js"></script>
+    <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
